# g0ridev.github.io

./: Debugging-tips.html  Debugging-tips.md  README.md  about.html  challenges.html  cpp-theory-quiz.html  daily-debug-quiz.html  index.html  index.md  insertion-sort.html  private-ideas-todo.md  questions.json
art-core/: art-index.html  music.html
articles/: Debugging-tips.md  auto.cpp  auto.md  unique-ptr.md
articles/ds&a/: binary-search.html
challenges/: insertion-sort.md
projects/insertion-sort/: CMakeLists.txt  insertion-sort.cpp  insertion-sort.h  tests.cpp  verbose-tests.cpp
projects/round-1/: insertion-sort.cpp  insertion-sort.h  mytest.cpp
projects/two-sum/: tests.cpp  two-sum.cpp  two-sum.h
resume-applications/: resume.html
storage/articles/ds&a/: binary-search.html
storage/articles/networking/tcp-server/: echo-client.py  echo-server.py
storage/binary-search/: binarysearch.cpp
storage/client-server/: client.py  server.py
storage/platform-game/: .game.exe.swp  game.c  game.cpp  level1.json  level2.json  level3.json  notes.md
treiva-site/: index.html
